--- a/styles.css
+++ b/styles.css
@@ -1,171 +1,101 @@
-* {
-    box-sizing: border-box;
-  }
+
 
 html,
 body {
     height: 100%;
-    background-color: #4d4339;
+    background-color: #ffffff;
     font-family: Helvetica, sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    color: #36363c;
+    line-height: 1.8em;
+    margin-top: -9px;
+    scroll-behavior: smooth;
+
+}
+.wrapper{
+    max-width: 1200px;
+    margin: 0 auto;
+    height: fit-content;
+    border: solid 0.5px #c8c8c8;
+}
+.header{
+    background-color: #c8c8c8;
+    height: 50px;
+    line-height: 50px;
+    position: sticky;
+    top: 0;
+}
+.nav_list, .list_links, .list_contacts {
+    list-style: none;
+    display: flex;
+    justify-content: space-around;
 }
 
-div {
-    background-color: #c7af93;
+.list_links, .list_contacts{
+    flex-direction: column;
 }
+a{
+    text-decoration: none;
+    color: #36363c;
+    padding: 10px;
+}
+a:hover{
+    cursor: pointer;
+    background-color: #36363c;
+    color: white;
 
-h2 {
-    font-size: 36px;
-    font-weight: 900;
-    line-height: 24px;
-    margin-bottom: 20px;
-    color: rgb(133, 133, 133);
-    font-style: italic;
-    letter-spacing: 5px;
+}
+.wrapper_main{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+
+}
+section{
+    margin-top: 40px;
+}
+.left_side {
+    max-width: 380px;
+    position: sticky;
+    top: 50px;
+    height: 850px;
+    background-color: #c8c8c8;
+}
+.right_side {
+    margin-left: 50px;
+    max-width: 820px;
     
 }
 
-@media (max-width: 768px) {
-    .section {
-      width: 100%;
-    }
-  }
-
-.wrapper{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    min-height: 100%;
-    max-width: 1440px;
-    margin: -10px auto;
-    padding: 0 16px;
-    border-radius: 2%;
-    overflow: hidden;
+.title  {
+    margin: 110px 0;
 }
 
-.header{
+.exp_wrapper{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-around;
-    border-bottom: 1px solid black;
-    padding-bottom: 10px;
-    height: 430px;
-}
-
-.header__img{
-    border-radius: 30px;
-    overflow: hidden;
-    margin: 10px 0 0 20px;
-    width: 30%;
-}
-
-.header__text {
-    display: flex;
-    font-size: 30px;
-    font-style: italic;
-    flex-wrap: wrap;
-    width: 400px;
-    height: 200px;
-    align-content: space-around;
-    margin: 70px 0 0 0;
-}
-
-.header__menu {
-    font-size: 30px;
-    width: 100%;
-    margin: 0;
-    font-family: Garamond;
-    line-height: 15px;
-    display: flex;
-    justify-content: center;
-}
-
-#menu > li {
-    display: inline-flex;
-    justify-content: space-between;
     align-items: center;
-    height: 70px;
-    width: 190px;
-    margin: 0 15px;
-    list-style: none;
-    background-color: #ede0cf;
-    border-radius: 30px;
-    line-height: 30px;
+    justify-content: space-around;
+    align-content: space-evenly;
+    height: 535px
+
 }
 
-#menu > li > a {
-    text-decoration: none;
-    color: black;
-    display: block;
-    margin: 0 auto;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    position: relative;
-    top: 20px;
+.exp_preview{
+    
+    width: 360px;
+    aspect-ratio: 16 / 9;
 }
-
-.header__text_name{
-    font-size: 40px;
-    font-weight: 900;
-    font-style: italic;
-    margin: 0;
-}
-
-.body{
-    display: flex;
-    max-width: 1440px;
-    flex-direction: row;
-    flex-wrap: wrap;
-    flex: 1 1 auto;
-    align-content: flex-start;
-    margin: 0 0 0 0;
-}
-
-.body__about{
-    width: 85%;
-    margin: 40px auto;
-    border-radius: 50px;
-    padding: 10px 40px;
-}
-
-section {
-    width: 34.5%;
-    margin: 45px auto;
-    padding: 30px;
-    font-size: 30px;
-    background-color: #ede0cf;
-    border-radius: 10%;
-    max-height: fit-content;
-    border: solid 1px, black;
-}
-
-code {
-    font-size: 30px;
-}
-
-.footer{
-    height: 150px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    max-width: 1440px;
-    border-top: solid 1px black;
-    font-size: 20px;
-    margin: 0;
+.exp_link{
     padding: 0;
-    line-height: 1.6em;
+    
 }
-.footer > ul li {
-    display: inline;
-}
-
-.footer_misc {
-    justify-content: space-between;
+.exp_link:hover{
+    color: #36363c;
 }
 
-.footer > .footer_misc > a {
-    align-self: flex-end;
-    justify-content: end;
+p{
+    margin: 0;
 }
